<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.prasad.socialnetworkandroidmvvm.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ABCDFF">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.120000005" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/enter_email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                    app:layout_constraintStart_toStartOf="@+id/inputEmail"
                    app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:onClick="@{() -> viewModel.onLoginClick()}"
                    app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                    app:layout_constraintStart_toStartOf="@+id/inputPassword"
                    app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

                <TextView
                    android:id="@+id/textViewNewHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/new_here"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                    app:layout_constraintHorizontal_bias="0.379"
                    app:layout_constraintStart_toStartOf="@+id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <TextView
                    android:id="@+id/textViewSignUpNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:onClick="@{() -> viewModel.onSignUpNowClick()}"
                    app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                    app:layout_constraintHorizontal_bias="0.392"
                    app:layout_constraintStart_toStartOf="@+id/textViewNewHere"
                    app:layout_constraintTop_toTopOf="@+id/textViewNewHere" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>